# sheet-music-browsarr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
.claude/skills/fix-musescore-download/: SKILL.md
.github/workflows/: musescore-pdf-worker.yml  release.yml
assets/: tailwind.css  zh_aliases.csv
docs/: plan.md
migrations/: 0001_initial.sql  0002_phase1.sql  0003_phase2.sql  0004_search_cache.sql
musescore-pdf-worker/: Dockerfile  HANDOFF.md  docker-compose.yml  prototype_harvest.py  requirements.txt  worker.py
src/: audit.rs  auth.rs  cache.rs  config.rs  db.rs  email.rs  main.rs  rate_limit.rs  secrets.rs  settings.rs  turnstile.rs
src/i18n/: alias.rs  mod.rs
src/routes/: admin.rs  mod.rs  public.rs
src/sources/: flaresolverr.rs  health.rs  imslp.rs  mod.rs  musescore.rs  mutopia.rs  ultimate_guitar.rs
templates/: _result_card.html  _search_results_items.html  base.html  flash.html  login.html  search.html  search_musescore.html  search_results.html  search_results_append.html
templates/admin/: index.html  library.html  search_log.html  settings.html  sources.html
