[package]
name = "sheet-music-browsarr"
version = "0.1.0"
edition = "2021"
description = "Sheet music search, download, and delivery service"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

askama = "0.12"
askama_axum = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
rand = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
