[package]
name = "sheet-music-browsarr"
version = "0.1.0"
edition = "2021"
description = "Sheet music search, download, and delivery service"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

askama = "0.12"
askama_axum = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
rand = "0.8"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream", "http2", "cookies"] }
scraper = "0.20"
futures-util = "0.3"
urlencoding = "2"

lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }

aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
async-trait = "0.1"

# Server-side search-result cache. Per (source_id, query) tuple, 60s TTL,
# 1000-entry LRU cap. Absorbs cross-user repeat queries and shields
# rate-limited upstreams (IMSLP in particular).
moka = { version = "0.12", features = ["future"] }

# Fuzzy fallback for the alias dictionary lookup (~60 curated entries).
# Lets "Chpin" still find Chopin -> the whole multilingual expansion
# pipeline then kicks in normally.
strsim = "0.11"

# JS runtime for MuseScore token minting. Pure-Rust to keep the build
# toolchain-light (no C compiler needed on host or in CI/Docker beyond what
# Cargo already pulls in). Boa is slower than QuickJS but token minting
# happens once per download and runs on a blocking thread anyway.
boa_engine = { version = "0.21", default-features = false }

# PDF assembly for MuseScore: musescore.com only serves per-page PNGs on
# free user uploads (no server-side PDF), so we stitch them ourselves.
printpdf = { version = "0.9", default-features = false, features = ["png"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
